fix: disable code block wrap & mobile nav hover issue

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -473,9 +473,9 @@
     'liga' 0,
     'calt' 0;
   display: block;
-  white-space: pre-wrap;
-  word-break: break-word;
-  overflow-wrap: anywhere;
+  white-space: pre;
+  word-break: normal;
+  overflow-wrap: normal;
   padding: 0;
   margin: 0;
   background: none;
